...
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.booklist.BookListActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:scrollbarStyle="outsideOverlay"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/noBooksError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
...
