<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_checkout"
        android:icon="@drawable/ic_checkout"
        android:orderInCategory="100"
        android:title="@string/basket_checkout"
        app:showAsAction="always"/>
</menu>