...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bookCover"
                app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/addToBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_add"
...
